@@ -1,4 +1,14 @@
 2005-11-01  wrobell <wrobell@pld-linux.org>
+	* gaphor/diagram/diagramitem.py: added support for persistent
+	properties
+
+	* gaphor/diagram/activitynodes.py, gaphor/diagram/flow.py,
+	gaphor/diagram/objectnode.py, gaphor/diagram/util.py,
+	gaphor/diagram/itemactions.py, tests/test-activitynodes.py: use
+	persistent properties where possible; refer to properites with
+	self.props
+
+2005-11-01  wrobell <wrobell@pld-linux.org>
 	* gaphor/UML/elementfactory.py: added __getitem__ method (live object
 	browser works again)
 
